tests/lean/bad_error5.lean.expected.out
bad_error5.lean:9:0: error: _tactic: trying to evaluate sorry
